4.Composing and Piping

--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <script src="https://cdn.jsdelivr.net/combine/npm/lodash@4.17.21/fp/compose.min.js,npm/lodash@4.17.21/fp/pipe.min.js,npm/lodash@4.17.21"></script> -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"
+      integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.fp.min.js"
+      integrity="sha512-PQPary7Ah0W8wFgizjGNg0jWpVUKLAxUCvdTNS4lpQFUtoeg5cmSaI8cJK3zh5TDgHDMMHo3tG3ZcLideDlRuQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <title>Document</title>
   </head>
   <body>
     Functional Programming!
-
     <script src="index.js"></script>
   </body>
 </html>
