--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
   <body>
     Functional Programming!
     <script src="index.js"></script>
+    <script src="currying.js"></script>
   </body>
 </html>
